--- a/src/app/folder-file-managment/file-tree/file-tree.component.html
+++ b/src/app/folder-file-managment/file-tree/file-tree.component.html
@@ -37,12 +37,12 @@
    <ul>
     <ng-container *ngFor="let folder of folders">
       <li>
-        <details>
+        <details [open]="isFolderOpen(folder)">
           <summary [class.active]="isFolderActive(folder)">
             <i class="fa-solid fa-folder" (click)="onFolderClick(folder)"></i> {{folder.name}}
           </summary>
           <!-- Recursively display child folders -->
-          <app-file-tree *ngIf="folder.childFolders  && folder.childFolders.length" [folders]="folder.childFolders"></app-file-tree>
+          <app-file-tree *ngIf="folder.childFolders && folder.childFolders.length" [folders]="folder.childFolders"></app-file-tree>
         </details>
       </li>
     </ng-container>
