--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,24 +4,21 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to bottom right, #2b78d0, #d4dfed);
+    background-image: url(../../assets/bg.jpg);
     color: #fff;
     text-align: center;
+    background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat;
   }
   
   .homepage-title {
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 20px;
-    color:rgb(56, 56, 249)
+    color:white
   }
   
-  .homepage-description {
-    font-size: 1.2rem;
-    margin-bottom: 40px;
-    max-width: 600px;
-    font-style: italic;
-  }
   
   .button-group {
     display: flex;
@@ -30,42 +27,27 @@
   }
   
 .btn {
-  background-color: #0078d0;
+  background-color: #be342a;
   border: 0;
   border-radius: 56px;
-  color: #fff;
+  color: #fefdfd;
   cursor: pointer;
   display: inline-block;
   font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
   font-size: 18px;
-  font-weight: 600;
-  outline: 0;
+  font-weight: 700;
   padding: 16px 21px;
   position: relative;
   text-align: center;
   text-decoration: none;
   transition: all .3s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+
 }
 
-.btn:before {
-  background-color: initial;
-  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
-  border-radius: 125px;
-  content: "";
-  height: 50%;
-  left: 4%;
-  opacity: .5;
-  position: absolute;
-  top: 0;
-  transition: all .3s;
-  width: 92%;
-}
 
 .btn:hover {
   box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  background-color: red;
   transform: scale(1.05);
 }
 
