--- a/src/app/authentication/register/register.component.css
+++ b/src/app/authentication/register/register.component.css
@@ -1,25 +1,31 @@
 
 .register {
     padding: 20px;
-    max-width: 400px;
-    margin: 0 auto;
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width:350px;
+    max-width: 100%; 
+
   }
   
-  .register-dialog h2 {
-    text-align: center;
-    margin-bottom: 20px;
+  .title {
+    text-align:center ;
+    margin-bottom: 10px;
     font-family: 'Roboto', sans-serif;
     color: #3f51b5;
+    font-weight: 600;
   }
   
   mat-form-field {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
-  
+
+.pass {
+    margin-bottom: 34px; 
+  } 
+
   .actions button {
     font-weight: bold;
     background-color: #ad3434;
@@ -38,23 +44,31 @@
     cursor: not-allowed;
   }
  
+  @media (min-width: 600px) {
+    .register {
+      width: 400px; 
+    }
   
-  .login-link {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    color: #757575;
+    .actions button {
+      margin: 0 5px; 
+      flex-grow: 0; 
+    }
   }
   
-  .login-link a {
-    color: #3f51b5;
-    text-decoration: none;
-    font-weight: 500;
-    cursor: pointer;
-    transition: color 0.3s;
-  }
+  @media (max-width: 600px) {
   
-  .login-link a:hover {
-    color: #303f9f;
+    .title {
+      font-size: 1.2rem; 
+    }
+  
+    .register {
+      padding: 15px;
+    }
+  
+    .actions {
+      flex-direction: column; 
+      gap:10px
+    }
   }
+ 
   
