--- a/src/app/dialogs/logout-confirm/logout-confirm.component.css
+++ b/src/app/dialogs/logout-confirm/logout-confirm.component.css
@@ -2,7 +2,7 @@
   width: 300px;
   height: 400px;
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: #e9f3f4;
   border-radius: 10px;
   text-align: center;
   position: relative;
@@ -20,16 +20,12 @@
   cursor: pointer;
 }
 
-.cancel i:hover {
-  color: #ff0000;
-}
-
 .user-avatar {
   margin: auto;
   margin-top: 30px;
   width: 80px;
   height: 80px;
-  background-color: #007bff;
+  background-color: #1f4b47;
   color: white;
   font-size: 36px;
   font-weight: bold;
@@ -54,12 +50,12 @@ h3 {
 
 .logout-button {
   background-color: white;
-  border: 1px solid #007bff;
+  border: 1px solid #1f4b47;
   margin-top: 80px;
-  color: rgb(83, 83, 83);
+  color: #1f4b47;
   padding: 10px 20px;
   border-radius: 15px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -69,5 +65,5 @@ h3 {
 }
 
 .logout-button:hover {
-  background-color: rgb(214, 214, 214);
+  background-color: rgb(228, 228, 228);
 }
