--- a/src/app/folder-file-managment/file-explorer/file-explorer.component.css
+++ b/src/app/folder-file-managment/file-explorer/file-explorer.component.css
@@ -35,23 +35,24 @@
 }
 
 .selectAll {
-  border: none;
+  border: 1px solid rgb(227, 227, 227);
+  border-radius: 10px;
+  padding:4px 10px;
   font-size: 10px;
   text-transform: lowercase;
-  color: rgb(247, 247, 247);
-  background-color: rgb(76, 12, 239); 
-  border-radius: 4px; 
-  padding: 2px 10px;
+  color: rgb(23, 26, 50);
+  background-color: white;
   cursor: pointer; 
-  margin-bottom: 5px;
   transition: all 0.3s ease; 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+  margin-left:10px
 }
 
 .selectAll:hover {
-  background-color: #0056b3; 
-  color:white
+  background-color: #ebebeb; 
+  color:rgb(88, 88, 88)
 }
+
+
 
 .file-explorer{
   margin-top:30px;
@@ -87,7 +88,9 @@
 
 /* path */
 .breadcrumb-container{
-  margin-bottom: 25px;
+  margin-bottom: 20px;
+  display: flex
+
 
 }
 
@@ -172,11 +175,8 @@ left:27%;
 .display button.active{
   background-color:  rgb(222, 233, 248);
 }
-.fol{
-  display: flex;
 
-}
-
+/* list */
 .list-view .container{
   justify-content: start;
 }
@@ -186,18 +186,16 @@ left:27%;
   align-items: center;
   position: relative;
   padding:5px;
-  display: flex;
   width: 100%;
   border-bottom: 1px solid #ddd;
 }
 .list-view .file-info {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap:30px;
-  overflow: hidden;
+  display: grid; 
+  grid-template-columns: repeat(3, 250px);
 }
+
 .list-view .file i, .list-view span, .list-view .file img{
-  font-size:20px;
+  font-size:15px;
 }
 
 /* if name too long i hide it */
@@ -210,6 +208,7 @@ left:27%;
 .list-view .file:hover{
   background-color: rgb(229, 229, 229);
 }
+
 
 
 @media (max-width: 1199px) {
