--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,10 @@
 <div class="homepage">
+
   <div class="container text-center">
-    <h1 class="homepage-title">Welcome to Your File Management System</h1>
-    <p class="homepage-description">
-      Organize, manage, and access your files easily and securely.
-    </p>
     <div class="button-group">
-      <button class="btn btn-primary " (click)="openLoginModal()">Login</button>
+      <button class="btn btn-primary " (click)="openLoginModal()">Welcome to FileFolderManager </button>
     </div>
   </div>
 </div>
+
   
