--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="container text-center">
     <div class="button-group">
-      <button class="btn btn-primary " (click)="openLoginModal()">Welcome to FileFolderManager </button>
+      <button class="btn btn-primary " (click)="open()">Welcome to FileFolderManager </button>
     </div>
   </div>
 </div>
