no result search div

--- a/src/app/dialogs/logout-confirm/logout-confirm.component.css
+++ b/src/app/dialogs/logout-confirm/logout-confirm.component.css
@@ -2,7 +2,7 @@
   width: 300px;
   height: 400px;
   padding: 20px;
-  background-color: #e9f3f4;
+  background-color: #f3f4f4;
   border-radius: 10px;
   text-align: center;
   position: relative;
