--- a/src/app/folder-file-managment/file-tree/file-tree.component.css
+++ b/src/app/folder-file-managment/file-tree/file-tree.component.css
@@ -1,14 +1,20 @@
 
 ul{
   list-style: none;
+  margin:0;
+  padding-left:15px
 }
 
 summary{
   margin-bottom:10px;
-  padding:5px 0px 5px 7px;
+  padding:5px 0px 5px 5px;
   border-radius: 20px;
   color:rgb(65, 65, 65);
   width:70%
+}
+summary::marker{
+  font-size:8px;
+
 }
 summary:hover{
   background-color: rgb(229, 229, 229);
