--- a/src/app/folder-file-managment/header/header.component.html
+++ b/src/app/folder-file-managment/header/header.component.html
@@ -64,11 +64,11 @@
         <button (click)="openLogout()" class="logout"> <i class="fa-solid fa-user"></i></button>
       </div>
     </div>
-      <div class="all-actions row" >
+      <div class="all-actions " >
         <div class="col-3">
-          <button class="create" (click)="openCreateFolderDialog()"><i class="fa-solid fa-plus"></i>Create folder </button> 
+          <button class="create" (click)="openCreateFolderDialog()"><i class="fa-solid fa-plus"></i><span>Create folder</span> </button> 
         </div>
-        <div class="actions col-3" *ngIf="selectedFolder || selectedFile || disableOtherActions()" >
+        <div class="actions " *ngIf="selectedFolder || selectedFile || disableOtherActions()" >
           <button [class.disabled]="(!selectedFolder && !selectedFile) || disableOtherActions()" (click)="openRenameFolderDialog()"><i class="fa-solid fa-file-signature"></i></button>
             <button [class.disabled]="!selectedFolder || disableOtherActions() || isZip()"  (click)="openUploadDialog()"><i class="fa-solid fa-upload"></i></button>
             <button [class.disabled]="!selectedFile || disableOtherActions()" (click)="downloadFile(selectedFile)"><i class="fa-solid fa-download"></i></button>
